WIP: records and articles models and endpoints, authorization
